--- a/src/app/core/pages/contacts/add-contact/add-contact.component.html
+++ b/src/app/core/pages/contacts/add-contact/add-contact.component.html
@@ -25,14 +25,10 @@
     />
   </div>
 
-  <div class="formgrid grid gap-4 mx-1">
-    <fieldset class="field col-12 m-0 p-0">
+  <div class="formgrid grid gap-2">
+    <fieldset class="field col-12">
       <legend>
-        <label
-          for="name"
-          class="block mb-2 font-bold line-height-2"
-          >Nome</label
-        >
+        <label for="name">Nome</label>
       </legend>
       <span class="p-input-icon-right w-full">
         <i class="pi pi-user"></i>
@@ -56,14 +52,9 @@
         >
       </div>
     </fieldset>
-
-    <fieldset class="field col-12 m-0 p-0">
+    <fieldset class="field col-12">
       <legend>
-        <label
-          for="channel"
-          class="block mb-2 font-bold line-height-2"
-          >Canal</label
-        >
+        <label for="channel">Canal</label>
       </legend>
       <p-dropdown
         styleClass="flex"
@@ -92,13 +83,9 @@
       </div>
     </fieldset>
 
-    <fieldset class="field col-12 m-0 p-0">
+    <fieldset class="field col-12">
       <legend>
-        <label
-          for="identify"
-          class="block mb-2 font-bold line-height-2"
-          >Identificador</label
-        >
+        <label for="identify">Identificador</label>
       </legend>
       <span class="p-input-icon-right w-full">
         <i class="pi pi-book"></i>
