--- a/src/app/core/pages/reminders/children/new-reminder/new-reminder.component.html
+++ b/src/app/core/pages/reminders/children/new-reminder/new-reminder.component.html
@@ -14,12 +14,7 @@
       <div class="col-12 lg:col px-0 flex flex-column gap-4">
         <fieldset class="field col-12 m-0 p-0">
           <legend>
-            <label
-              for="title"
-              class="font-semibold text-gray-500"
-            >
-              Título
-            </label>
+            <label for="title"> Título </label>
           </legend>
           <input
             class="w-full mt-2"
@@ -34,12 +29,7 @@
 
         <fieldset class="field col-12 m-0 p-0">
           <legend>
-            <label
-              for="description"
-              class="font-semibold text-gray-500"
-            >
-              Mensagem
-            </label>
+            <label for="description"> Mensagem </label>
           </legend>
 
           <textarea
@@ -56,12 +46,7 @@
 
         <fieldset class="max-w-full field col-12 m-0 p-0">
           <legend>
-            <label
-              for="usersToReminder"
-              class="font-semibold text-gray-500"
-            >
-              Destinatário
-            </label>
+            <label for="usersToReminder"> Destinatário </label>
           </legend>
           <p-multiSelect
             inputId="usersToReminder"
@@ -117,12 +102,7 @@
       <div class="col-12 lg:col px-0 flex flex-column gap-3 align-self-start">
         <fieldset class="field col-12 m-0 p-0">
           <legend>
-            <label
-              for="scheduled"
-              class="font-semibold text-gray-500"
-            >
-              Agendamento
-            </label>
+            <label for="scheduled"> Agendamento </label>
           </legend>
           <p-calendar
             formControlName="scheduled"
