--- a/src/app/core/pages/reminders/reminders.component.html
+++ b/src/app/core/pages/reminders/reminders.component.html
@@ -3,12 +3,10 @@
   label2="lembretes"
 ></gl-title>
 
-<div
-  class="my-4 w-full inline-flex justify-content-center lg:justify-content-start"
->
+<div class="my-4 w-full">
   <p-tabMenu
     [model]="items"
-    [activeItem]="activeItem"
+    [activeItem]="items[0]"
   />
 </div>
 
