--- a/src/app/styles/primeng.scss
+++ b/src/app/styles/primeng.scss
@@ -70,7 +70,7 @@ ul {
 
   .p-dialog-content {
     padding: 24px;
-    padding-top: 0;
+    padding-top: 4px;
 
     fieldset {
       max-width: 400px;
