feat: improve obeservability in layout sidebar

--- a/src/app/core/components/layout/layout.component.html
+++ b/src/app/core/components/layout/layout.component.html
@@ -11,7 +11,7 @@
 <p-sidebar
   [(visible)]="isSidebarOpen"
   [modal]="isMobile"
-  [closeOnEscape]="false"
+  [closeOnEscape]="!isMobile"
   [showCloseIcon]="false"
   [blockScroll]="true"
 >
