--- a/src/styles.scss
+++ b/src/styles.scss
@@ -50,6 +50,7 @@ fieldset {
 
   legend label {
     cursor: pointer;
+    font-family: 'Poppins', sans-serif;
     display: block;
     margin-bottom: 0.65rem;
     font-weight: bold;
