chore!: install lint-staged

--- a/src/app/core/components/back-button/back-button.component.html
+++ b/src/app/core/components/back-button/back-button.component.html
@@ -5,7 +5,7 @@
     [rounded]="true"
     severity="info"
     [outlined]="true"
-    (click)="location.back()"
+    (click)="goBack()"
     pTooltip="Voltar"
     class="shadow-1"
   ></button>
