--- a/src/app/core/pages/user-account/profile/profile.component.html
+++ b/src/app/core/pages/user-account/profile/profile.component.html
@@ -153,7 +153,7 @@
   class="flex flex-column md:flex-row align-items-top justify-content-center gap-4 w-full pt-4 md:mt-4"
 >
   <div
-    class="flex flex-column justify-content-center align-items-center mt-2 gap-2"
+    class="flex flex-column justify-content-start align-items-center mt-3 gap-2"
   >
     <label for="avatar">
       <p-avatar
