--- a/src/app/core/pages/contacts/contacts.component.html
+++ b/src/app/core/pages/contacts/contacts.component.html
@@ -3,6 +3,7 @@
   [modal]="true"
   [draggable]="false"
   [resizable]="false"
+  [focusOnShow]="false"
 >
   <ng-template pTemplate="header">
     <header [style]="{ maxWidth: '900px' }">
@@ -101,12 +102,10 @@
   </ng-template>
 </p-dialog>
 
-<header class="pb-5">
-  <gl-title
-    label1="Meus"
-    label2="contatos"
-  />
-</header>
+<gl-title
+  label1="Meus"
+  label2="contatos"
+/>
 
 <div class="flex justify-content-between align-items-center pt-4">
   <p-button
