style: shadow on sidebar

--- a/src/app/core/components/layout/layout.component.html
+++ b/src/app/core/components/layout/layout.component.html
@@ -14,6 +14,8 @@
   [closeOnEscape]="!isMobile"
   [showCloseIcon]="false"
   [blockScroll]="true"
+  [closeOnEscape]="false"
+  styleClass="shadow-4"
 >
   <ng-template pTemplate="header">
     <img
